# MyAIAssistant

./: .env.example  .gitignore  404.html  AGENT.md  DEPLOYMENT.md  DOCKER_SETUP_COMPLETE.md  FRONTEND_SETUP.md  README.md  build.sh  config.yaml  docker-compose.dev.yml  docker-compose.postgres.yml  docker-compose.yml  index.html  install.sh  mkdocs.yml  pyrightconfig.json  requirements.md  requirements.txt  sitemap.xml
agent_core/: README.md  pyproject.toml
agent_core/agent_core/: __init__.py  client.py  config.py  types.py
agent_core/agent_core/agents/: Untitled  __init__.py  _llm_default.py  agent_config.py  agent_factory.py  agent_router.py  base_agent.py  code_agent.py  data_query_agent.py  factory.py  general_agent.py  meeting_agent.py  mlx_base_agent.py  note_parser_agent.py  openai_base_agent.py  query_classifier.py  rag_agent.py  task_agent.py  task_tagging_agent.py  tool_registry.py
agent_core/agent_core/providers/: __init__.py  anthropic.py  base.py  huggingface.py  llm_provider_base.py  llm_provider_factory.py  ollama.py  openai.py
agent_core/tests/: __init__.py  test_agent_router.py  test_agents.py  test_client.py  test_config.py  test_document_loader.py  test_providers.py  test_query_classifier.py
agent_core/tests/it/: __init__.py  conftest.py  test_agent_router.py  test_agent_router_ollama.py  test_base_agent.py  test_calculator_agent.py  test_huggingface_provider.py  test_meeting_agent.py  test_mlx_base_agent.py  test_note_parser.py  test_ollama_provider.py  test_openai_agent.py  test_persona_agent.py  test_query_classifier.py  test_rag_website.py  test_task_agent.py
agent_core/tests/tmp/: a.txt  test_agent_router.py  test_agents.py  test_document_loader.py  test_it_agent_router.py  test_query_classifier.py  test_rag_website.py
agent_core/tests/ut/: Untitled  test_agent_factory.py  test_agent_router.py  test_agents.py  test_client.py  test_config.py  test_data_query_agent.py  test_document_processor.py  test_factories.py  test_note_parser.py  test_providers.py  test_query_classifier.py  test_rag_system.py  test_task_tagging_agent.py  test_tools.py  test_types.py  test_vector_store.py
agent_service/: Dockerfile  README.md  config.yaml  pyproject.toml  start_dev_mode.sh
agent_service/agent_service/: __init__.py  ai_db.py  config.yaml  knowledge.py  main.py  project_env.py
agent_service/agent_service/agents/: __init__.py  agent_config.py  agent_factory.py  base_ai_agent.py  chat.py  model.py  task_agent.py
agent_service/agent_service/routes/: chat.py  extract.py  health.py  myai_agent_api.py  tag.py
agent_service/agent_service/tools/: __init__.py  backend_tools.py  customer_index_normalize.py  migrate_customer_index.py
agent_service/data/: agents.db  ai.db  contents.db  memory.db
agent_service/data/chroma/: chroma.sqlite3
agent_service/scripts/: normalize_customer_indexes.py  start_llm_server.sh
agent_service/src/agent_service/: config.py  config.yaml  knowledge.py  main.py
agent_service/test_wksp/: memory.db
agent_service/test_wksp/chroma/: chroma.sqlite3
agent_service/tests/: conftest.py
agent_service/tests/fixtures/: biz_db_task_example.json
agent_service/tests/it/: __init__.py  conftest.py  debug_as.py  test_agent_service.py  test_agent_service_api.py  test_task_analysis_agent.py  test_website_km.py
agent_service/tests/ut/: conftest.py  test_agent_service.py  test_backend_tools.py  test_chat_stream.py  test_customer_index_normalize.py  test_legacy_customer_import.py
ai_assist_cli/: README.md  pyproject.toml  updateDoc.sh
ai_assist_cli/ai_assist_cli/: __init__.py  cli.py
ai_assist_cli/ai_assist_cli/agents/: __init__.py  note_parse_models.py  note_parser_agno.py  org_challenges_agent.py  workspace_notes_tools.py
ai_assist_cli/ai_assist_cli/commands/: __init__.py  config.py  global_cmd.py  init.py  knowledge.py  note_cmd.py  org_cmd.py  run.py  workspace.py
ai_assist_cli/ai_assist_cli/services/: __init__.py  api_client.py  db_url.py  knowledge_processor.py  llm_env.py  llm_model.py  workspace.py
ai_assist_cli/data/chroma/: chroma.sqlite3
ai_assist_cli/tests/: __init__.py
ai_assist_cli/tests/data/: notes_1.md
ai_assist_cli/tests/ut/: test_db_url.py  test_knowledge_cmd.py  test_note_cmd.py  test_org_cmd.py  test_workspace_cmd.py  (+1 more)
backend/: .dockerignore  .gitignore  DOCKER.md  Dockerfile  IMPLEMENTATION.md  MyAIAssistant.code-workspace  QUICKSTART.md  README.md  config.example.yaml  dev-config.yaml  import_customer_notes.sh  import_organization_notes.sh  index_customer_notes.sh  index_km_notes.sh  pyproject.toml  pytest.ini
backend/app/: config.yaml  main.py
backend/migrations/: add_customer_project.sql  add_indexed_at_column.sql  add_meeting_past_next_steps.sql  add_meeting_refs_table.sql  add_next_steps_to_projects.sql  add_organization_past_next_steps.sql  add_organization_project.sql  add_organizations_is_top_active.sql  add_organizations_name_unique_index.sql  add_persons_table.sql  add_presents_to_meeting_refs.sql  add_settings_table.sql  add_status_project_count_to_assets.sql  add_todo_asset_id.sql  add_todo_organization_id.sql  add_todo_tags.sql  add_weekly_todo_tables.sql  alter_project.sql  alter_settings_add_llm_provider.sql  convert_project_steps_to_json.sql
backend/scripts/: migrate_project_steps.py  report_org_meetings.py
backend/tests/: biz-config.yaml  conftest.py  km-config.yaml
backend/tools/: __init__.py  import_customer_notes.py  import_organization_notes.py  migrate_notes_and_meetings_layout.py  migrate_org_description_to_path.py  migrate_sqlite_to_postgres.py  migrate_steps_to_json.py  vectorize_folder.py
mcp_todos/: README.md  pyproject.toml
mcp_todos/mcp_todos/: __init__.py  __main__.py  client.py  server.py  tools.py
(+368 files in other folders)
