[project]
name = "agent-core"
version = "0.1.0"
description = "Core library for building agentic AI applications with LLM integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.13.0",
    "huggingface-hub>=0.25.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.13.3",
    "pytest-asyncio>=1.3.0",
    "mlx-lm>=0.29.1",
    "openai>=2.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require external services like Ollama)",
]

