[project]
name = "agent-service"
version = "0.1.0"
description = "Agno/AgentOS microservice for chat, knowledge, and RAG (MyAIAssistant)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno[os]>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "openai>=2.24.0",
    "ollama>=0.6.1",
    "chromadb>=1.5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["ignore::DeprecationWarning"]
timeout = 30
timeout_method = "thread"
