[project]
name = "MyAIAssistant-backend"
version = "0.1.0"
description = "Backend API for MyAIAssistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",  # SQLite async driver for local deployments
    "greenlet>=3.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    # Agent core library
    "agent-core",
]

[tool.uv.sources]
agent-core = { path = "../agent_core", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "psycopg2-binary>=2.9.11",  # For sync PostgreSQL in migration scripts
]
