[project]
name = "mcp-todos"
version = "0.1.0"
description = "MCP server for MyAIAssistant todos (create, search, get, update, delete)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_todos"]
